Updating retry schedule logic